--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,47 @@
 asgiref==3.6.0
+async-generator==1.10
+attrs==22.2.0
+beautifulsoup4==4.11.1
+cairocffi==1.6.0
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==2.1.1
+colorama==0.4.6
+cssselect2==0.7.0
+defusedxml==0.7.1
 Django==4.1.4
 django-jazzmin==2.6.0
+djangorestframework==3.14.0
+exceptiongroup==1.1.0
+h11==0.14.0
+idna==3.4
+Levenshtein==0.21.1
+lxml==4.9.2
+numpy==1.24.1
+outcome==1.2.0
+pandas==1.5.3
+Pillow==10.0.0
+pycparser==2.21
+pypng==0.20220715.0
+PyQRCode==1.2.1
+PySocks==1.7.1
+python-barcode==0.15.1
+python-dateutil==2.8.2
+python-Levenshtein==0.21.1
+pytz==2022.7.1
+rapidfuzz==3.1.1
+requests==2.28.1
+selenium==4.8.0
+six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.3.2.post1
 sqlparse==0.4.3
+tinycss2==1.2.1
+trio==0.22.0
+trio-websocket==0.9.2
+typing_extensions==4.7.1
 tzdata==2022.7
+urllib3==1.26.13
+webencodings==0.5.1
+wsproto==1.2.0
